--- a/aip.tex
+++ b/aip.tex
@@ -66,7 +66,7 @@ TO DO LIST:
  \item[$\Box$] Replace ``Lemma'' with ``Proposition'', if there's no immediate application in sight.
 \end{enumerate}
 }
-
+\pedro[inline]{What if we use $m$ for the number of variables/rows, to free $d$ to be the preferred notation for denominators?}
 
 \details[inline]{
    TO-DO LIST (Continued):
