--- a/aip.tex
+++ b/aip.tex
@@ -330,8 +330,8 @@ More relevant to this article, though, is the description of $\ideala^{[k]}$ in 
 Frobenius powers are extended to allow nonnegative real exponents, through the use of the Frobenius ``roots'' introduced in \cite{blickle+mustata+smith.discr_rat_FPTs}.
 Explicitly, for a nonnegative rational exponent of the form $k/p^e$, we define
 \[\ideala^{[k/p^e]} \coloneqq \big(\ideala^{[k]}\big)^{[1/p^e]},\]
-and for an arbitrary positive real number $t$, we define $\ideala^{[t]}$ by taking approximations of $t$ from above by such rational numbers, in a way analogous to the definition of test ideals in \loccit
-\pedro{Make this more explicit?}
+and for an arbitrary positive real number $t$, we define $\ideala^{[t]}$ by taking approximations of $t$ from above by such rational numbers, in a way analogous to the definition of test ideals in \loccit \, More explicitly, if $\left\{t_j\right\}_{j=1}^\infty$ is a sequence of real numbers limiting to $t$ from above, each of the form $k/p^e$ for some $k>0$ and $e \geq 0$, then $\ideala^{[t]}$ is defined the union of the ideals $\ideala^{[t_j]}$.
+\pedro{Make this more explicit?}\emily{Added explicit definition.}
 
 Like test ideals and multiplier ideals, as $t$ varies, the Frobenius powers $\ideala^{[t]}$ form a nonincreasing chain, and are right-constant for positive $t$, \ie $\ideala^{[t+\epsilon]} = \ideala^{[t]}$, for $0<\epsilon \ll 1$.
 The positive exponents where $\ideala^{[t]}$ ``jumps'' (that is, $\ideala^{[t-\epsilon]}\ne \ideala^{[t]}$, for all $0<\epsilon \le t$) are called the \emph{critical exponents} of $\ideala$.
