--- a/aip.tex
+++ b/aip.tex
@@ -25,7 +25,7 @@ TO DO LIST:
  \item[$\CheckedBox$] Decide on name for minimal coordinate.
  \comment[inline]{Going with ``special point''.}
 % \pedro[inline]{
-%     Do we have a consensus for ``special points''? 
+% %     Do we have a consensus for ``special points''? 
 % } 
 % \daniel[inline]{Emily likes it.  I thought for a while, and couldn't come up with something better.  If anyone gets inspired, we can always change it later.  So, let's make this change.  Should we say ``Let $\vv{s}$ be a special point \emph{for} $(A, \vv{u})$ and use the notation $\operatorname{sp}(A, \vv{u})$ or $\operatorname{special}(A, \vv{u})$?  The more time passes, the more I appreciate computer programming notation (where we just write out entire words, or longer abbreviations), but I don't insist that we do that here.
 % }
@@ -501,7 +501,7 @@ This proposition and \eqref{eq: limit} suggest the following definition.
 In the algebraic context established above, $\ft{A}{\vv{u}}$ is the $F$-threshold of $\ideala$ with respect to the diagonal ideal $\ideald = \diag(\vv{u})$.
 
 \begin{proof}[Proof of \Cref{FT descriptions: P}]
-   \ \todo[inline]{Show that $(1) = (2)$}
+   \ \todo[inline]{Show that $(1) = (2)$\emily[inline]{I'm working on this.}}
    Let $\O$ be a face of $\N$ containing $\mf(A,\vv{u})$, and fix $\vv{c} \in \RR^d$ defining $\O$ in $\N$.
    Then $\vv{u} \in \lambda \O$ by assumption, and in view of \Cref{alpha=1: convention} we have $\iprod{\vv{c}}{\vv{u}} = \lambda$.
    Similarly, if $\vv{d}$ defines a standard face of $\N$, then $\vv{u} \in \lambda \N$ implies that $\iprod{\vv{d}}{\vv{u}} \geq \lambda$.
