--- a/aip.tex
+++ b/aip.tex
@@ -437,7 +437,7 @@ In order to relate this value to the Newton polyhedron of $A$ we need the follow
 
 \pedro[inline]{
    Do we really need \eqref{ip} and  \eqref{min ip}?
-   Maybe we can get away simply with:
+   Maybe all we need is:
    \begin{quote}
       \emph{The inner product $\iprod{\vv{c}}{\vv{u}}$, where $\vv{c} \in \RR^d$ is a point defining the minimal face $\mf(A, \vv{u})$ in $\N$.}
    \end{quote}   
@@ -575,8 +575,6 @@ Our assertion then follows from the observation that since $A$ is fixed, as $(A,
 
 
 \subsection{Special points and denominators}
-
-\ \comment[inline]{Special points are how we construct canonical solutions to the integer program $\IP(A, \vv{u}, q)$;  see \Cref{canonical-feasible: T} for more details.}
 
 Technicalities that arise in future sections whenever the minimal face of a monomial pair $(A, \vv{u})$ is unbounded force us to consider a certain distinguished subset of optimal points, in which we require a strengthening of condition \eqref{mc decomposition: e} in \Cref{opt set: C}.
 
