--- a/aip.tex
+++ b/aip.tex
@@ -6,9 +6,9 @@
 \begin{document}
 
 \title[Fractal and arithmetic programs]{Fractal and arithmetic programs, and the Frobenius powers of monomial ideals}
-\author{Daniel J.\ Hern\'andez}
+\author{Daniel J.~Hern\'andez}
 \author{Pedro Teixeira}
-\author{Emily E. Witt}
+\author{Emily E.~Witt}
 \maketitle
 
 \newcommand{\denom}{\ell} %We should stick to the same notation for the denominator of a special point.  Sometimes D is used, but I would prefer a lowercase letter.  Lowercase "d" makes sense, but we use that for the dimension of the ambient polynomial ring.
@@ -614,7 +614,7 @@ The set of all such points is denoted $\sp(A, \vv{u})$, and the set of all such 
 \begin{example}
    The containments described in \Cref{opt versus mc: P} may all be proper.
    Indeed, if $A$ and $\vv{u}$ are as in \Cref{ex: ft}, then $\opt \LP(A,\vv{u})$, highlighted in green in \Cref{fig: splitting polytope}, is the line segment connecting $(1/17, 0, 3/17)$ and $(2/17, 1/17, 1/17)$.
-   Its interior consists of this line segment excluding the endpoints, while the set of special points for $(A,\vv{u})$ consists of this line segment excluding only the first endpoint.
+   Its interior excludes both endpoints, while the set of special points for $(A,\vv{u})$ excludes only the first endpoint.
 \end{example}
 
 % Consider the monomial matrix \[ A = \begin{bmatrix} a & 0 & c \\ 0 & b & c \\ 0 & 0 & d \end{bmatrix} \] 
