--- a/preamble.tex
+++ b/preamble.tex
@@ -80,17 +80,17 @@
 \newcommand{\LP}{\mathrm{P}}
 \newcommand{\IP}{\Pi}
 \newcommand{\ip}{\Theta}
-\newcommand{\im}{\operatorname{im}}
-\newcommand{\opt}{\operatorname{opt}}
-\newcommand{\val}{\operatorname{val}}
-\newcommand{\feas}{\operatorname{feas}}
+\DeclareMathOperator{\im}{im}
+\DeclareMathOperator{\opt}{opt}
+\DeclareMathOperator{\val}{val}
+\DeclareMathOperator{\feas}{feas}
 
 %convexity
-\newcommand{\conv}{\operatorname{conv}}
-\newcommand{\cone}{\operatorname{cone}}
-\newcommand{\rb}{\operatorname{rb}}
-\newcommand{\rs}{\operatorname{rs}}
-\newcommand{\ri}{\operatorname{ri}}
+\DeclareMathOperator{\conv}{conv}
+\DeclareMathOperator{\cone}{cone}
+\DeclareMathOperator{\rb}{rb}
+\DeclareMathOperator{\rs}{rs}
+\DeclareMathOperator{\ri}{ri}
 
 %euclidean space
 \newcommand{\vv}[1]{\mathbf{#1}} %vectors
@@ -105,11 +105,11 @@
 \newcommand{\down}[1]{\left\lfloor #1 \right\rfloor} %floor
 
 %random
-\newcommand{\col}{\operatorname{col}}
-\newcommand{\mf}{\operatorname{mf}}
+\DeclareMathOperator{\col}{col}
+\DeclareMathOperator{\mf}{mf}
 \renewcommand{\sp}{\operatorname{sp}}
-\newcommand{\rep}{\operatorname{rep}}
-\newcommand{\lis}{\operatorname{list}}
+%\DeclareMathOperator{\rep}{rep}
+%\DeclareMathOperator{\lis}{list}
 \newcommand{\Q}{\mathcal{Q}}
 %\newcommand{\N}{\mathrm{N}}
 \newcommand{\N}{\mathcal{N}}
@@ -118,8 +118,8 @@
 \newcommand{\Z}{\mathcal{Z}}
 
 % newly-defined commands
-\newcommand{\diag}{\operatorname{diag}}
-\newcommand{\crit}{\operatorname{crit}}
+\DeclareMathOperator{\diag}{diag}
+\DeclareMathOperator{\crit}{crit}
 \newcommand{\orep}{\mathbb{O}}
 \newcommand{\witt}{\mathfrak{W}}
 \newcommand{\graph}{\mathfrak{S}}
